fix(web): fix search hint animation collapse

--- a/actor-sdk/sdk-web/src/styles/components/_toolbar.scss
+++ b/actor-sdk/sdk-web/src/styles/components/_toolbar.scss
@@ -145,11 +145,11 @@ $stem-size: 10px;
     &__dropdown {
       position: absolute;
       top: 100%;
-      right: -4px;
       left: -4px;
 
       overflow: hidden;
 
+      width: 308px;
       margin-top: 4px;
 
       color: rgba($greyish-brown, .6);
